--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="icon_logo.ico">
+    <link rel="shortcut icon" href="./assets/icon_logo.ico">
     <title>Datagram -Formulaire de contact</title>
 </head>
 
