--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-     <h1><img src="./assets/logo_datagram.svg" alt="Logo de Datagram"> Datagram </h1> 
-
+     
+   <h1><img class="logo" src="./assets/logo_datagram.svg" alt="Logo de Datagram"> Datagram </h1>
 
 
     
