--- a/index.html
+++ b/index.html
@@ -13,10 +13,25 @@
 
 <body>
 
-     
-   <h1><img class="logo" src="./assets/logo_datagram.svg" alt="Logo de Datagram"> Datagram </h1>
+<main>
+
+    <h1><img class="logo" src="./assets/logo_datagram.svg" alt="Logo de Datagram"> Datagram </h1>
+
+    <h2>Formulaire de contact</h2>
+
+    <div class="placepicone">
+        <img class="icon_users" src="./assets/icon_users.svg" alt="Icone Utilisateurs rond">
+            <div class="placep">
+                <p class="p1">Entrez vos coordonnées de manière à ce qu’on puisse mieux exploiter vos données.</p>
+                <p class="p2">N'ayez crainte, vos données ne seront jamais revendues et utilisées pour connaître tout vos faits et gestes.</p>    
+            </div>
+    </div> 
+<!----------------------Fin du premier contenue-------------------------->
+
+  
 
 
-    
+
+</main>     
 </body>
 </html>
