--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
                 <p class="p2">N'ayez crainte, vos données ne seront jamais revendues et utilisées pour connaître tout vos faits et gestes.</p>    
             </div>
     </div> 
+
 <!----------------------Fin du premier contenue-------------------------->
 
-  
+<div class="inpligne1">
+    <div class="nomtel">
+        <h3 class="nom">Nom et prénom</h3>
+        <h3 class="tel">Téléphone</h3>
+    </div>
+        <div class="placeinp1et2">
+            <input class="inp1" type="text"> <input class="inp2" type="text">
+        </div>
+</div> 
 
 
 
