--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <h3 class="tel">Téléphone</h3>
     </div>
         <div class="placeinp1et2">
-            <input class="inp1" type="text"> <input class="inp2" type="text">
+            <input class="inp1" type="text" placeholder="&#xf007;">
+            <input class="inp2" type="text">
         </div>
 </div> 
 
 
 
-</main>     
+</main>
+<script src="https://kit.fontawesome.com/fb1680e2ef.js" crossorigin="anonymous"></script>   
 </body>
 </html>
