--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
     </div>
         <div class="placeinp1et2">
             <input class="inp1" type="text" placeholder="&#xf007;">
-            <input class="inp2" type="text">
+            <input class="inp2" type="text" placeholder="&#xf3cd;">
         </div>
 </div> 
+<div class="inpligne2">
+    <div class="mailadr">
+        <h3 class="mail">Mail</h3>
+        <h3 class="adresse">Adresse</h3>
+    </div>
+    .placeinp3et4
+
+</div>
 
 
 
