--- a/index.html
+++ b/index.html
@@ -39,14 +39,21 @@
             <input class="inp2" type="text" placeholder="&#xf3cd;">
         </div>
 </div> 
-<div class="inpligne2">
-    <div class="mailadr">
-        <h3 class="mail">Mail</h3>
-        <h3 class="adresse">Adresse</h3>
-    </div>
-    .placeinp3et4
+<!--Fin de ligne1-->
 
-</div>
+    <div class="inpligne2">
+        <div class="mailadr">
+            <h3 class="mail">Mail</h3>
+            <h3 class="adresse">Adresse</h3>
+        </div>
+
+        <div class="placeinp3et4">
+            <input type="text" class="inp3" placeholder="&#xf0e0;">
+            <input type="text" class="inp4" placeholder="&#xf015;">
+        </div>
+    </div>
+    <!--Fin de ligne 2-->
+
 
 
 
