--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
     </div>
     <!--Fin de ligne 2-->
 
+    <div class="inpligne3">
+        <div class="messbtn">
+            <h3 class="message">Message</h3>
+        </div>
+        <div class="placeinp5etbtn">
+            <input type="text" class="inp5" placeholder="&#xf036;">
+            <button class="send">Envoyer</button>
+        </div>
+    </div>
+
 
 
 
