--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/style.css">
-    <link rel="icon" href="./assets/logo.ico">
+    <link rel="icon" href="./assets/media/logo.ico">
 
     <title>Datagram -Formulaire de contact</title>
 
@@ -15,12 +15,12 @@
 
 <main>
 
-    <h1><img class="logo" src="./assets/logo_datagram.svg" alt="Logo de Datagram"> Datagram </h1>
+    <h1><img class="logo" src="./assets/media/logo_datagram.svg" alt="Logo de Datagram"> Datagram </h1>
 
     <h2>Formulaire de contact</h2>
 
     <div class="placepicone">
-        <img class="icon_users" src="./assets/icon_users.svg" alt="Icone Utilisateurs rond">
+        <img class="icon_users" src="../projet_contactform/assets/media/icon_users.svg" alt="Icone Utilisateurs rond">
             <div class="placep">
                 <p class="p1">Entrez vos coordonnées de manière à ce qu’on puisse mieux exploiter vos données.</p>
                 <p class="p2">N'ayez crainte, vos données ne seront jamais revendues et utilisées pour connaître tout vos faits et gestes.</p>    
