--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div> 
 
 <!----------------------Fin du premier contenue-------------------------->
-
+<form>
 <div class="inpligne1">
     <div class="nomtel">
         <h3 class="nom">Nom et prénom</h3>
         <h3 class="tel">Téléphone</h3>
     </div>
         <div class="placeinp1et2">
-            <input class="inp1" type="text" placeholder="&#xf007;" pattern="^[( )a-zA-Z]+$" required>
+            <input class="inp1" type="text" placeholder="&#xf007;" pattern="^[( )a-zA-Z]+$">
             <input class="inp2" type="text" placeholder="&#xf3cd;" minlength="10"required >
         </div>
 </div> 
@@ -49,7 +49,7 @@
         </div>
 
         <div class="placeinp3et4">
-            <input type="text" class="inp3" placeholder="&#xf0e0;" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"required>
+            <input type="email" class="inp3" placeholder="&#xf0e0;" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"required>
             <p class="errormail"></p>
             <input type="text" class="inp4" placeholder="&#xf015;">
         </div>
@@ -65,7 +65,7 @@
             <button class="send">Envoyer</button>
         </div>
     </div>
-
+</form>
 
 
 
