--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Formulaire de contact</h2>
 
     <div class="placepicone">
-        <img class="icon_users" src="../projet_contactform/assets/media/icon_users.svg" alt="Icone Utilisateurs rond">
+        <img class="icon_users" src="./assets/media/icon_users.svg" alt="Icone Utilisateurs rond">
             <div class="placep">
                 <p class="p1">Entrez vos coordonnées de manière à ce qu’on puisse mieux exploiter vos données.</p>
                 <p class="p2">N'ayez crainte, vos données ne seront jamais revendues et utilisées pour connaître tout vos faits et gestes.</p>    
@@ -31,6 +31,7 @@
 <!----------------------Fin du premier contenue-------------------------->
 <form>
 <div class="inpligne1">
+    <span class="erreur">L'adresse mail ou le téléphone n'est pas valide</span>
     <div class="nomtel">
         <h3 class="nom">Nom et prénom</h3>
         <h3 class="tel">Téléphone</h3>
@@ -50,7 +51,6 @@
 
         <div class="placeinp3et4">
             <input type="email" class="inp3" placeholder="&#xf0e0;" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"required>
-            <p class="errormail"></p>
             <input type="text" class="inp4" placeholder="&#xf015;">
         </div>
     </div>
